--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main class="container">
         <div class="gif-img">
-            <img src="img/bubble.gif">
+            <img src="img/bubble.png">
         </div>
         <div class="row" style="margin-top: 20%">
             <div class="card col s12 hoverable">
@@ -24,7 +24,7 @@
                     </div>
                 </div>
                 <div class="center">
-                    <button class="btn waves-effect waves-light hoverable red" type="submit" name="submit">Bubble the Web
+                    <button class="btn waves-effect waves-light hoverable red" type="submit" name="submit">Bubble
                         <i class="material-icons left">search</i>
                     </button>
                     <div class="section"/>
