--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab" rel="stylesheet">
+    <style>
+        .function a:hover {
+    color: green;
+    }
+    </style>
 </head>
 <body>
     <div class="hameid-loader-overlay">
@@ -67,11 +72,19 @@
                     <button class="btn waves-effect waves-light hoverable red" type="submit" name="submit">Bubble
                         <i class="material-icons left">search</i>
                     </button>
+                    <a href="login.php" class="btn teal waves-effect waves-light hoverable">Submit your site<i class="material-icons right">send</i></a>
                     <div class="section"/>
                 </div>
                 </form>
             </div>
         </div>
+    <center>
+        <div class="function">
+    <a href="http://localhost/BubbleSearchEngine/Terms.html" style="padding-right: 10px; float: right;">Terms</a>
+    <a href="http://localhost/BubbleSearchEngine/About.html" style="padding-left: 10px; float: left;">About</a>
+    <a href="http://localhost/BubbleSearchEngine/Feedback.php" style="padding-left: 25%; float:left">Feedback</a>
+    </div>
+    </center>
     </main>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
