--- a/index.html
+++ b/index.html
@@ -77,15 +77,15 @@
                 </div>
                 </form>
             </div>
-        </div>
+        </div>   
+    </main>
     <center>
-        <div class="function">
-    <a href="http://localhost/BubbleSearchEngine/Terms.html" style="padding-right: 10px; float: right;">Terms</a>
-    <a href="http://localhost/BubbleSearchEngine/About.html" style="padding-left: 10px; float: left;">About</a>
-    <a href="http://localhost/BubbleSearchEngine/Feedback.php" style="padding-left: 25%; float:left">Feedback</a>
+        <div class="function" style="margin-bottom: 3%;">
+    <a href="http://localhost/BubbleSearchEngine/About.html" style="padding-left: 40%; float: left;">About</a>
+    <a href="http://localhost/BubbleSearchEngine/Feedback.php" style="padding-left: 20px; float:left">Feedback</a>
+    <a href="http://localhost/BubbleSearchEngine/Terms.html" style="padding-left: 20px; float: left;">Terms</a>
     </div>
     </center>
-    </main>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-alpha.3/js/materialize.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
